Updates build naming.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,3 @@
 include_directories(../wiiuse/src)
-add_executable(llmtester tester.c)
-target_link_libraries(llmtester wiiuse)
+add_executable(llmtester.o tester.c)
+target_link_libraries(llmtester.o wiiuse)
